# ushiro

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  conanfile.py
source/: CMakeLists.txt
source/ushiro/: CMakeLists.txt  event_bus.hpp  state_observer.hpp  store.hpp  subscribe_event_list.hpp
tests/: CMakeLists.txt  ushiro.cpp  ushiro.t.cpp
